dissertation content complete
to anke, pete, katharina

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -227,7 +227,7 @@ In Gothic, the relative pronoun is allowed to surface in the internal case and t
 \end{table}
 
 Old High German is another instance of a language in which the relative pronoun is allowed to surface in the internal case and the external case. This conclusion follows from my own research of the texts `Der althochdeutsche Isidor', `The Monsee fragments', `Otfrid's Evangelienbuch' and `Tatian' in ANNIS \citep{krause2016}.\footnote{
-Old High German is widely discussed in the literature because of its case attraction in headed relatives \citep[cf.][]{pittner1995}, a phenomenon that seems related to case competition in headless relatives (see Section \ref{sec:attraction} for why attraction is not further discussed in this dissertation).
+Old High German is widely discussed in the literature because of its case attraction in headed relatives \citep[cf.][]{pittner1995}, a phenomenon that seems related to case competition in headless relatives.
 A common observation is that case attraction in headed relatives in Old High German adheres to the case scale. The same is claimed for headless relatives.
 What, to my knowledge, has not been studied systematically is whether Old High German headless relatives allow the internal case and the external case to surface when either of them wins the case competition. This is what I investigated in my work.
 }
@@ -409,6 +409,11 @@ The two examples in which the nominative and the dative compete are highlighted 
 
 I end with the competition between the dative and the accusative. Following the case scale, the relative pronoun appears in the dative case and never in accusative. As Old High German allows the internal and the external case to surface, the dative surfaces when it is the internal case and when it is the external case.
 
+I have not found an example in which the internal dative case competes against the external accusative case.
+Interestingly, this is the same example that has not been attested with two verbal predicates in Gothic.
+Still, I believe that these missing occurrences are due to independent reasons rather than meaningful gaps in the paradigm.
+Just as in Gothic, headless relative constructions are infrequent in Old High German and Old High German also only has few verbal predicates that take dative complements.
+
 % not found:
 
 % Consider the example in \ref{ex:ohg-acc-dat}. In this example, the internal dative case competes against the external accusative case.
@@ -433,7 +438,7 @@ Examples in which the internal case is accusative, the external case is dative a
 be.\ac{pres}.2\ac{sg} -2\ac{sg}.\ac{nom} now truly {great}.\ac{cmpr}\scsub{[dat]} Abraham.\ac{dat} and \tsc{rp}.\ac{pl}.\ac{m}.\ac{dat} one.\ac{nom}.\ac{m}.\ac{sg} here now tell.\ac{pst}.3\ac{sg}\scsub{[acc]}\\
 `are you now truly greater than Abraham? and than those, who one talked about here now' \flushfill{Old High German, \ac{otfrid} III 18:33}\label{ex:ohg-dat-acc}
 
-The two examples in which the accusative and the dative compete are highlighted in Table \ref{tbl:summary-old-high-german-acc-dat}. The light gray marking corresponds to \ref{ex:ohg-acc-dat}, in which the internal dative wins over the external accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:ohg-dat-acc}, in which the external dative wins over the internal accusative, and the relative pronoun surfaces in the dative case.
+The two examples in which the accusative and the dative compete are highlighted in Table \ref{tbl:summary-old-high-german-acc-dat}. The empty cell that is marked light gray corresponds to the missing example, in which the internal dative would win over the external accusative, and the relative pronoun would surface in the dative case. The dark gray marking corresponds to \ref{ex:ohg-dat-acc}, in which the external dative wins over the internal accusative, and the relative pronoun surfaces in the dative case.
 
 \begin{table}[ht]
   \center
@@ -457,7 +462,7 @@ The two examples in which the accusative and the dative compete are highlighted 
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \ac{dat}
-          & \cellcolor{LG}\ac{dat}
+          & \cellcolor{LG}
           & (\ac{dat})
           \\
     \bottomrule
