--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -657,12 +657,14 @@ Consider the forms after this second phonological change and the surface forms i
   \label{tbl:pol-rps-change2-real}
 \end{table}
 
-The last phonological change is the combination of \tit{c}, \tit{i} and \tit{o} becoming \tit{cze} in the genitive and dative.
+The last phonological change is the combination of \tit{c}, \tit{i} and \tit{o} becoming \tit{cze} in the genitive and dative.\footnote{
+Note, however, that the \tit{co} in the nominative and the accusative does not become \tit{cze}. I assume that the \tit{o} in the nominative and accusative resists the process in \ref{ex:pol-phon-c+o}. This is because the \tit{o} in the nominative and accusative is morphologically and phonologically a `different' \tit{o} than the \tit{o} in the genitive and dative.
+Morphologically, the \tit{o} in the genitive and dative spells out different features than the \tit{o} in \tit{co}, such as nominative and accusative case, which in the case of the genitive and dative are realized by \tit{go} and \tit{mu}.
+Phonologically, this difference can be modeled by analyzing the \tit{o} in \tit{co} as an \tit{o} without a slot for a vowel and the \tit{o} in the genitive and dative as an \tit{o} plus a slot for a vowel. That is why in the case of \tit{co}, the \tit{i} has its influence on the \tit{k} (as described in \ref{ex:pol-phon-k+i}), and in the case of the \tit{o} in the genitive and dative, the \tit{i} has its influence on \tit{k} but also on the \tit{o}.
+}
 
 \ex.\label{ex:pol-phon-c+o}
 \a. /c/ + /i/ + /o/ → /cze/
-
-Note, however, that the \tit{co} in the nominative and the accusative does not become \tit{cze}. I assume that the \tit{o} in the nominative and accusative resists the process in \ref{ex:pol-phon-c+o}. This is because the \tit{o} in the nominative and accusative is a `different' \tit{o} than the \tit{o} in the genitive and dative. This \tit{o} spells out different features than the \tit{o}, such as nominative and accusative case, which in the case of the genitive and dative are realized by \tit{go} and \tit{mu}.
 
 I am not aware of an example that independently shows this change as a whole. However, there are examples that show the change step by step. That is, I have an example in which the combination of \tit{i} and \tit{o} becomes \tit{e}, and I have an example in which \tit{c} and \tit{e} become \tit{cze}. I give them in \ref{ex:pol-phon-c+o-steps}.
 
@@ -1230,7 +1232,7 @@ Light-headed relatives do not allow this morpheme to be inserted, illustrated in
 Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} ever Maria sings\\
 `John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headed-ever}
 
-just as for Modern German, I assume that the headless relative is not derived from an ungrammatical structure.\footnote{
+Just as for Modern German, I assume that the headless relative is not derived from an ungrammatical structure.\footnote{
 \citet{citko2004} takes the complementary distribution of \tit{kolwiek} `ever' and the demonstrative to mean that they share the same syntactic position. I have nothing to say about the exact syntactic position of \tit{ever}, but in my account it cannot be the head of the relative clause, as this position is reserved for the extra light head. My reason for the incompatibility of \tit{ever} and the demonstrative is that they are semantically incompatible.
 
 For concreteness, I assume \tit{ever} to be situated within the relative clause. Placing it in the main clause generates a different meaning, illustrated by the contrast in meaning between \ref{ex:cz-wh-ever} and \ref{ex:cz-ever-wh} in Czech.
@@ -1332,7 +1334,7 @@ In what follows, I construct the Polish extra light heads. Until the feature \ts
 
 \ex.\label{ex:pol-spellout-o-ind-rep}
 \begin{forest} boom
-  [\tsc{ind}P, s sep=20mm
+  [\tsc{ind}P, s sep=25mm
       [\tsc{an}P,
       tikz={
       \node[label=below:\tit{o},
@@ -1941,7 +1943,7 @@ I derive this from the internal syntax of light heads and relative pronouns in P
 A crucial characteristic of matching languages such as Polish is that they have separate morphemes for phi and case features. Therefore, the light head is structurally contained in the relative pronoun when the internal and the external case match. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 When the internal and external case differ, neither the light head nor the relative pronoun is structurally contained in the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
 
-In other words, the difference between Modern German and Polish that leads them to be of different language types is that I analyze Modern German extra light heads as monomorphemic (e.g. \tit{n}) and Polish extra light heads as bimorphemic (e.g. \tit{o-go}).
+In other words, the crucial difference between Modern German and Polish that leads them to be of different language types is that I analyze Modern German extra light heads as monomorphemic (e.g. \tit{n}) and Polish extra light heads as bimorphemic (e.g. \tit{o-go}).
 This raises the question of whether Polish extra light heads could not be monomorphemic too. A possible hypothesis would be that the morpheme \tit{go} is the extra light head and not \tit{o-go}.
 A parallel between the Polish \tit{go} (and \tit{mu}) and the Modern German \tit{n} (and \tit{m}) would be that they both surface as pronouns in their respective languages. However, there is a difference between the Polish \tit{go} and Modern German \tit{n}. The Polish \tit{go} is analyzed as a clitic \cite{swan2002}, whereas the Modern German \tit{n} is analyzed as a weak pronoun (see footnote \ref{ftn:mg-weak-pronoun}).
 I assume that the weak pronoun in Polish is \tit{o-go} (which combines with the \tit{i} I introduced in Section \ref{sec:pol-rel} to become a strong pronoun). A question that remains unanswered is why \tit{o-go} does not surface as a weak pronoun.
