--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -47,7 +47,8 @@ The relative pronoun \tit{þaim)} `\ac{rp}.\ac{sg}.\ac{m}.\ac{dat}' appears in t
 {is not} 1\ac{sg}.\ac{poss}.\ac{nom} to give.\ac{inf}\scsub{[dat]} {except for} \ac{rp}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} prepare.\ac{ptcp} be.\ac{pret}.3\ac{sg}\scsub{[dat]}\\
 `it is not mine to give except for to the one, for whom it was prepared'\flushfill{Gothic, \ac{mark} 10:49, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-dat}
 
-These findings can be summarized as in Table \ref{tbl:summary-gothic-matching}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:gothic-nom-nom}, in which the internal nominative case competes ains] the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:gothic-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The unmarked dative corresponds to \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
+These findings can be summarized as in Table \ref{tbl:summary-gothic-matching}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:gothic-nom-nom}, in which the internal nominative case competes ains] the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:gothic-acc-acc-rep}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case.
+The unmarked dative corresponds to \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
 
 \begin{table}[ht]
  \center
@@ -81,7 +82,7 @@ These findings can be summarized as in Table \ref{tbl:summary-gothic-matching}. 
 
 In Table \ref{tbl:summary-gothic-matching}, six cells remain empty. These are the cases in which the internal and the external case differ.
 It has been argued in the literature that the two competing cases always adhere a to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This is the scale I gave in the introduction of this chapter, repeated here in \ref{ex:case-scale}. Elements more to the right on this scale win over elements more to the left on this scale.\footnote{
-In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded. I discussed the genitive briefly in Section \ref{sec:genitive}.
+In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded.
 }
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
