--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[hidelinks,a4paper]{memoir}
 
-\includeonly{deriving-unrestricted}
+% \includeonly{deriving-unrestricted}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
@@ -77,7 +77,7 @@ thanks
 \mainmatter
 \setcounter{secnumdepth}{4}
 
-\include{introduction}
+% \include{introduction}
 %
 \part{Case competition}\label{part:case-facts}
 \include{recurring-pattern}
@@ -94,7 +94,7 @@ thanks
 \include{deriving-unrestricted}
 
 \bookmarksetup{startatroot}
-\include{discussion}
+% \include{discussion}
 
 %%%%%
 \backmatter
