--- a/discussion.tex
+++ b/discussion.tex
@@ -77,3 +77,14 @@ I show this in Figure \ref{fig:lexical-entries-rep}.
 \end{figure}
 
 Reformulating these parameters is not just restating the generalization in different terms. With this new formulation, I am able to identify the elements (i.e. the light head and the relative pronoun) that bear the internal and external cases. The difference between languages lies in whether or not it is possible to delete the light head (and with it the external case) and the relative pronoun (and with it the internal case).
+
+
+
+
+
+
+In Chapter \ref{ch:deriving-onlyinternal}, I motivate the analysis for the internal-only type of language Modern German. I first identify the morphemes that Modern German light heads and relative pronouns consist of. Then I show which features each of the morphemes correspond to. The lexical entries are such that the light heads is contained in the relative pronoun when the cases match and when the internal case is more complex. In these cases there is a grammatical headless relative. When the external case is more complex, neither the light head nor the relative pronoun is contained in the other element, so there is no grammatical headless relative.
+
+In Chapter \ref{ch:deriving-matching}, I motivate the analysis for the matching type of language Polish. Again I identify the morphemes that the light heads and relative pronouns consist of. The crucial difference between the internal-only type of language Modern German and the matching type of language Polish is how the phi and case features are spelled out. In Modern German they are spelled out by a phi and case feature portmanteau, which is a single lexical entry. In Polish, the same features are spelled out by a phi feature morpheme and a case feature morpheme, which are two lexical entries. This difference causes a difference in containment when the internal case is more complex. In Modern German the light head is contained in the relative pronoun, but in Polish the light head is not contained in the relative pronoun. This is the crucial difference between a language of the matching type and a language of the internal-only type.
+
+Finally, in chapter \ref{ch:deriving-unrestricted}, I do the same for the unrestricted type of language Old High German. Also here I identify the morphemes that the light heads and relative pronouns consist of. I show that Old High German differs from the other two languages in that it has light heads and relative pronouns that are syncretic. That point is crucial for the unrestricted type of language, because it allows making use of formal containment: an element can be absent if it is formally contained within the other element. This is the only way in which the relative pronoun can be contained in the light head and the relative pronoun can be deleted, even though the relative pronoun contains one feature more than the light head. Toward the end of the chapter I briefly sketch what I assume the larger syntactic structure of a headless relative looks like.
