--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -60,6 +60,18 @@
   tag = abbr
 }
 
+\DeclareAcronym{ela}{
+  short = \tsc{ela} ,
+  long  = elative ,
+  tag = abbr
+}
+
+\DeclareAcronym{ptv}{
+  short = \tsc{ptv} ,
+  long  = partitive ,
+  tag = abbr
+}
+
 \DeclareAcronym{poss}{
   short = \tsc{poss} ,
   long  = possessive ,
