--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -898,3 +898,17 @@
   year={1979},
   publisher={JSTOR}
 }
+
+@article{carlson1977,
+  title={Remarks on the syntax of Free Relative Clauses},
+  author={Carlson, Lauri},
+  journal={Manuscript, Cambridge: MIT},
+  year={1977}
+}
+
+@book{karlsson2013,
+  title={Finnish: An essential grammar},
+  author={Karlsson, Fred},
+  year={2013},
+  publisher={Routledge}
+}
