--- a/tables/gothic-summary.tex
+++ b/tables/gothic-summary.tex
@@ -2,24 +2,24 @@
 
 \begin{tabular}{c|c|c|c}
   \toprule
-      \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+      \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
         & [\ac{nom}]
         & [\ac{acc}]
         & [\ac{dat}]
         \\ \cmidrule{1-4}
     [\ac{nom}]
         & \ac{nom}
-        & \colorbox{DG}{\ac{acc}}
-        & \colorbox{DG}{\ac{dat}}
+        & \cellcolor{DG}{\ac{acc}}
+        & \cellcolor{DG}{\ac{dat}}
         \\ \cmidrule{1-4}
     [\ac{acc}]
-        & \colorbox{LG}{\ac{acc}}
+        & \cellcolor{LG}{\ac{acc}}
         & \ac{acc}
-        & \colorbox{DG}{\ac{dat}}
+        & \cellcolor{DG}{\ac{dat}}
         \\ \cmidrule{1-4}
     [\ac{dat}]
-        & \colorbox{LG}{\ac{dat}}
-        & \colorbox{LG}{(\ac{dat})}
+        & \cellcolor{LG}{\ac{dat}}
+        & \cellcolor{LG}{(\ac{dat})}
         & \ac{dat}
         \\
   \bottomrule
