--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[hidelinks,a4paper]{memoir}
 
-% \includeonly{deriving-unrestricted}
+\includeonly{case-competition-typology}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
@@ -77,8 +77,8 @@ thanks
 \mainmatter
 \setcounter{secnumdepth}{4}
 
-% \include{introduction}
-%
+\include{introduction}
+
 \part{Case competition}\label{part:case-facts}
 \include{recurring-pattern}
 \include{case-decomposition}
@@ -94,9 +94,9 @@ thanks
 \include{deriving-unrestricted}
 
 \bookmarksetup{startatroot}
-% \include{discussion}
+\include{discussion}
 
-%%%%%
+%%%%
 \backmatter
 
 \clearpage
